品优购项目存档

--- a/pinyougouweb/pinyougouitemweb/src/main/webapp/item.html
+++ b/pinyougouweb/pinyougouitemweb/src/main/webapp/item.html
@@ -291,7 +291,7 @@
                                 <ul class="btn-choose unstyled">
                                     <li>
                                         <a href="javascript:;"
-                                           class="sui-btn  btn-danger addshopcar">加入购物车</a>
+                                           class="sui-btn  btn-danger addshopcar" @click="addToCart">加入购物车</a>
                                     </li>
                                 </ul>
                             </div>
